[package]
name = "gravity-2d"
version = "0.1.0"
authors = ["st170001 <st170001@stud.uni-stuttgart.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physical_constants = "0.3.0"
cgmath = "0.17.0"
matplotrust = "0.1.7"
